# snake-game

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  matrix-snake-game.pro
matrix-snake-game/: matrix-snake-game.pro
matrix-snake-game/resources/: resources.qrc
matrix-snake-game/src/: bite.cpp  bite.h  board.cpp  board.h  config.cpp  config.h  direction.h  mainwindow.cpp  mainwindow.ui  matrixscene.cpp  matrixscene.h  snake.cpp  snake.h
resources/: resources.qrc
src/: bite.cpp  bite.h  board.cpp  config.cpp  config.h  direction.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixscene.cpp  matrixscene.h  snake.cpp  snake.h
